--- a/main.html
+++ b/main.html
@@ -9,5 +9,11 @@
 <body>
     <h1>my first github file</h1>
     <p>This is a common text</p>
+
+    <p>To send files to github we need to <br>
+        git add . <br>
+        git commit -m"a message" <br>
+        git push
+    </p>
 </body>
 </html>
